Increase marquee speed on mobile (2x faster)

--- a/bluflame_landing.html
+++ b/bluflame_landing.html
@@ -1104,6 +1104,10 @@
             .marquee-item {
                 font-size: 1.8rem;
             }
+
+            .marquee-content {
+                animation: scroll 8s linear infinite;
+            }
         }
 
         /* Scroll Animations */
