WanderAI: use image preview and link to live site

--- a/index.html
+++ b/index.html
@@ -1624,9 +1624,9 @@
                     </div>
                 </div>
 
-                <div class="portfolio-card fade-in" onclick="openCaseStudy('wanderai')">
+                <div class="portfolio-card fade-in" onclick="window.open('https://wanderainow.netlify.app/', '_blank')">
                     <div class="portfolio-image">
-                        <div class="portfolio-icon">✈️</div>
+                        <img class="portfolio-img" src="wanderai.png" alt="WanderAI preview" loading="lazy">
                     </div>
                     <div class="portfolio-content">
                         <div class="portfolio-tags">
@@ -1637,7 +1637,7 @@
                         <h3 class="portfolio-title">WanderAI</h3>
                         <p class="portfolio-desc">AI-powered travel companion with personalized itineraries, budget tracking, real-time news, and travel memory organization. Features Google Maps integration.</p>
                         <span class="portfolio-link">
-                            View Case Study <span>→</span>
+                            View Project <span>→</span>
                         </span>
                     </div>
                 </div>
