PalTalk: use blabla.png and link to live site

--- a/index.html
+++ b/index.html
@@ -1642,9 +1642,9 @@
                     </div>
                 </div>
 
-                <div class="portfolio-card fade-in" onclick="openCaseStudy('paltalk')">
+                <div class="portfolio-card fade-in" onclick="window.open('https://blablanow.netlify.app', '_blank')">
                     <div class="portfolio-image">
-                        <div class="portfolio-icon">🗣️</div>
+                        <img class="portfolio-img" src="blabla.png" alt="BlaBla preview" loading="lazy">
                     </div>
                     <div class="portfolio-content">
                         <div class="portfolio-tags">
@@ -1655,7 +1655,7 @@
                         <h3 class="portfolio-title">PalTalk</h3>
                         <p class="portfolio-desc">AI-powered language learning companion with voice conversations. Practice speaking naturally with an AI tutor powered by Supabase and Expo.</p>
                         <span class="portfolio-link">
-                            View Case Study <span>→</span>
+                            View Project <span>→</span>
                         </span>
                     </div>
                 </div>
